--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="sk.gista.medobs"
       android:versionCode="1"
-      android:versionName="1.0">
+      android:versionName="0.1-r24">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".Medobs" android:screenOrientation="portrait"
                   android:label="@string/app_name">
