--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,20 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="sk.gista.medobs"
-      android:versionCode="1"
-      android:versionName="0.1-r24">
+<?xml version="1.0" ?><manifest android:versionCode="1" android:versionName="init-25-g23278fc
+" package="sk.gista.medobs" xmlns:android="http://schemas.android.com/apk/res/android">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".Medobs" android:screenOrientation="portrait"
-                  android:label="@string/app_name">
+        <activity android:label="@string/app_name" android:name=".Medobs" android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-		<activity android:name="sk.gista.medobs.widget.DateWidget" android:label="Calendar" android:theme="@android:style/Theme.Dialog"/>
+		<activity android:label="Calendar" android:name="sk.gista.medobs.widget.DateWidget" android:theme="@android:style/Theme.Dialog"/>
 		<activity android:label="@string/label_settings" android:name="sk.gista.medobs.Settings" android:screenOrientation="portrait"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-sdk android:minSdkVersion="7" />
+    <uses-sdk android:minSdkVersion="7"/>
 	
-</manifest> 
+</manifest>
