--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" ?><manifest android:versionCode="1" android:versionName="init-28-g7dd01aa
+<?xml version="1.0" ?><manifest android:versionCode="1" android:versionName="init-29-g8d38f08
 " package="sk.gista.medobs" xmlns:android="http://schemas.android.com/apk/res/android">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:label="@string/app_name" android:name=".Medobs" android:screenOrientation="portrait">
